# tupleops

./: Cargo.toml  README.md
src/: lib.rs  macro_impl.rs  test.rs
