[package]
name = "tuplestructops"
version = "0.1.2"
edition = "2021"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Structural manipulations for tuples"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsgf/tuplestructops"
documentation = "https://docs.rs/tuplestructops/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq-macro = "0.3"

[features]
tuple_24 = [] # implement for tuples up to 24 (inclusive)
tuple_32 = [] # implement for tuples up to 32 (inclusive)
